# sudoku-solver

./: .gitignore  README.md  setup.cfg
data/Solved/: 1001Lines_by_JakhobWooferzfg.json  10Line_by_Phistomefel.json  111155559999_by_grklesGabeyK9.json  1212_by_FlorianWortmann.json  12Arrows_by_12tone.json  159Bullseye_by_Luda3.json  159Skyscraper_by_Clover.json  159Sudoku_by_shye.json  159Thermo_by_DyingFlutchman.json  2021ThermoSudoku_by_SerhiiTyshchenko.json  2023_by_Nikoleta.json  23Renban_by_FlorianWortmann.json  2DWaveParticles_by_zetamath.json  2manyarrowsspoilthebox_by_tesseralis.json  315XVKillers_by_Piksil.json  325_by_ThomasSnyder.json  345_by_AadvandeWetering.json  3Snakes_by_JeetSampat.json  3sintheCorners_by_JC.json  400K_by_WombatBreath.json  400kSubscribers_by_PjotrV.json  400kmilestonemedley_by_olima.json  40Corners_by_the_cogito.json  44s_by_AronLidAspartagcus.json  4DS_by_Bremster.json  4OClock_by_JustKirb.json  5YearsCTC_by_Jodawo.json  5_by_DennisChen.json  71_by_AadvandeWetering.json  7and8make15_by_AadvandeWetering.json  9921_by_SSG.json  AChristmasCracker_by_clover.json  ALittleOfftheTop_by_Cane_Puzzles.json  AMathematicalPhenomenon_by_Xenonetix.json  AMeanderingPath_by_10feet.json  AMiracleSudoku_by_Phistomefel.json  AVeryFullQuiver_by_Oddlyeven.json  AWalkintheBlackForest_by_BremSter.json  AWindowintotheRing_by_Spelldaddy.json  (+692 more)
puzzlesolver/: SolvePuzzle.py
scripts/: MassTesting.py  UpdateFormat.py  run_puzzle.py  run_puzzle_model.py  run_puzzledraw.py  run_solve_puzzle.py
tests/: test_custom_constraints.py  test_solve_puzzle.py
(+70 files in other folders)
