[metadata]
name = puzzlesolver
version = 1.0
author = <Firstname Lastname>
author_email = youremail@email.com
description = A sudoku variant solver using ortools cp-sat solver. Includes a command line tool to solve puzzles.
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
install_requires = ortools
python_requires = >=3.11

[options.entry_points]
console_scripts =
        psolver = puzzlesolver.SolvePuzzle:main

[options.packages.find]
include = puzzlesolver