[metadata]
name = puzzlesolver
version = 1.0
author = André Sarandeses
author_email = acamposarandeses@gmail.com
description = A sudoku variant solver using ortools cp-sat solver. Includes a command line tool to solve puzzles.
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
licence = GNU GPLv3
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = ortools
python_requires = >=3.11

[options.packages.find]
include = puzzlesolver

[options.entry_points]
console_scripts =
        psolver = puzzlesolver.SolvePuzzle:main
